--- a/css/styles.css
+++ b/css/styles.css
@@ -319,16 +319,11 @@ img {
     position: relative;
 }
 
-.img-box-title {
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 70px;
-    background: rgba(47, 48, 58, 0.8);
-    bottom: 0;    
-}
-
 .img-title {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: var(--primary-font);
     font-weight: 700;
     font-size: 14px;
@@ -336,9 +331,10 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--main-color);
-    text-align: center;
-    padding-top: 27px;
-    padding-bottom: 27px;    
+    width: 100%;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    bottom: 0;
 }
 
 
@@ -517,7 +513,6 @@ img {
     display: flex;
     justify-content: center;
     gap: 10px;
-    transition: background-color var(--duration) var(--timing-function);
 }
 
 .footer-social-link {
@@ -527,7 +522,8 @@ img {
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color var(--duration) var(--timing-function);
 }
 
 .footer-icon {
@@ -564,6 +560,7 @@ img {
     border-radius: 4px;
     border-color: transparent;
     padding: 6px 22px;
+    transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function), box-shadow var(--duration) var(--timing-function);
 }
 
 .portfolio-btn:hover,
@@ -603,10 +600,38 @@ img {
 
 .cards-link {
     display: block;
+    transition: box-shadow var(--duration) var(--timing-function);
 }
 
 .cards-link:hover,
 .cards-link:focus {
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.portfolio-box-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-family: var(--primary-font);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;   
+    letter-spacing: 0.03em;
+    color: var(--main-color);
+    background-color: rgba(33, 150, 243, 0.9);
+    padding: 63px 24px;
+    width: 100%;
+    height: 100%;
+    transform: translate(0, 100%);
+    transition: transform var(--duration) var(--timing-function);
+}
+
+.cards-item:hover .overlay {
+    transform: translate(0, 0);
 }
