--- a/css/styles.css
+++ b/css/styles.css
@@ -95,8 +95,6 @@ img {
 /* ---------------- header ------------------ */
 
 .page-header {
-    padding-top: 24px;
-    padding-bottom: 24px;
     border-bottom: 1px solid #ECECEC;
 }
 
@@ -120,6 +118,7 @@ img {
 }
 
 .menu-link {
+    display: block;
     position: relative;
     font-weight: 500;
     font-size: 14px;
@@ -588,6 +587,7 @@ img {
     line-height: 2.0;
     letter-spacing: 0.06em;
     margin-bottom: 4px;
+    color: var(--primary-text-color);
 }
 
 .portfolio-text {
@@ -632,7 +632,8 @@ img {
     transition: transform var(--duration) var(--timing-function);
 }
 
-.cards-item:hover .overlay {
+.cards-link:hover .overlay,
+.cards-link:focus .overlay {
     transform: translate(0, 0);
 }
 
